Fix bug in setting optimizer on PyTorchClassifier

--- a/Using_sklearn_pytorch.ipynb
+++ b/Using_sklearn_pytorch.ipynb
@@ -20,15 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "b02aaf7b-11b5-4512-8a3b-5c26d8235b3a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:05:51.860554Z",
-     "start_time": "2023-12-11T07:05:51.736596Z"
+     "end_time": "2023-12-11T07:52:53.489371Z",
+     "start_time": "2023-12-11T07:52:52.366276Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MOA jar path location (config.ini): ./jar/moa.jar\n",
+      "JVM Location (system): \n",
+      "\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
+      "Sucessfully started the JVM and added MOA jar to the class path\n"
+     ]
+    }
+   ],
    "source": [
     "from prepare_jpype import start_jpype\n",
     "\n",
@@ -45,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "3b7be7ed-97d2-437a-9ed9-fb71e4f33328",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:05:53.202270Z",
-     "start_time": "2023-12-11T07:05:51.865196Z"
+     "end_time": "2023-12-11T07:52:55.570196Z",
+     "start_time": "2023-12-11T07:52:53.543410Z"
     }
    },
    "outputs": [
@@ -100,12 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "38d831be-3560-4efd-89bd-1ec71f001833",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:05:53.217046Z",
-     "start_time": "2023-12-11T07:05:53.207747Z"
+     "end_time": "2023-12-11T07:52:55.581973Z",
+     "start_time": "2023-12-11T07:52:55.571347Z"
     }
    },
    "outputs": [
@@ -149,12 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "2745848d-43d1-4d9e-a191-14e6be61bf7b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:06:27.092513Z",
-     "start_time": "2023-12-11T07:05:53.215131Z"
+     "end_time": "2023-12-11T07:53:25.006334Z",
+     "start_time": "2023-12-11T07:52:55.581444Z"
     }
    },
    "outputs": [
@@ -162,15 +174,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 32.6 s, sys: 747 ms, total: 33.4 s\n",
-      "Wall time: 33.9 s\n"
+      "CPU times: user 28.8 s, sys: 701 ms, total: 29.5 s\n",
+      "Wall time: 29.4 s\n"
      ]
     },
     {
      "data": {
       "text/plain": "83.88064971751412"
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,12 +229,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "8d9efdb8-fbe1-430d-b5c9-cc738d13e598",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:06:31.816607Z",
-     "start_time": "2023-12-11T07:06:27.176450Z"
+     "end_time": "2023-12-11T07:53:28.436508Z",
+     "start_time": "2023-12-11T07:53:25.038218Z"
     }
    },
    "outputs": [
@@ -230,7 +242,7 @@
      "data": {
       "text/plain": "80.94103107344633"
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,12 +282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "1f457d2f-1b5d-4f41-a883-f11bc7a59814",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:07:08.820481Z",
-     "start_time": "2023-12-11T07:06:31.820530Z"
+     "end_time": "2023-12-11T07:53:53.407047Z",
+     "start_time": "2023-12-11T07:53:28.437780Z"
     }
    },
    "outputs": [
@@ -283,15 +295,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 36.9 s, sys: 305 ms, total: 37.2 s\n",
-      "Wall time: 37 s\n"
+      "CPU times: user 25 s, sys: 104 ms, total: 25.2 s\n",
+      "Wall time: 25 s\n"
      ]
     },
     {
      "data": {
       "text/plain": "83.88064971751412"
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,12 +343,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "da2bba35-c258-4fc0-8932-f97d56e4e276",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:07:42.593526Z",
-     "start_time": "2023-12-11T07:07:08.822056Z"
+     "end_time": "2023-12-11T07:54:18.675633Z",
+     "start_time": "2023-12-11T07:53:53.407580Z"
     }
    },
    "outputs": [
@@ -344,7 +356,7 @@
      "data": {
       "text/plain": "83.88064971751412"
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import random\n",
@@ -396,8 +408,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:07:42.595927Z",
-     "start_time": "2023-12-11T07:07:42.593005Z"
+     "end_time": "2023-12-11T07:54:18.676689Z",
+     "start_time": "2023-12-11T07:54:18.669019Z"
     }
    },
    "id": "2242896e95964ef4"
@@ -414,12 +426,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "fbcd4d91-2b00-4d5a-9c54-f9dd6a291aa5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:07:42.604301Z",
-     "start_time": "2023-12-11T07:07:42.599143Z"
+     "end_time": "2023-12-11T07:54:22.106578Z",
+     "start_time": "2023-12-11T07:54:18.675651Z"
     }
    },
    "outputs": [
@@ -478,12 +490,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "81092940-5a6b-4377-b550-ed6f5fee711a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:08:41.714822Z",
-     "start_time": "2023-12-11T07:07:42.606208Z"
+     "end_time": "2023-12-11T07:55:03.909308Z",
+     "start_time": "2023-12-11T07:54:22.108679Z"
     }
    },
    "outputs": [
@@ -610,12 +622,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "1c75513c-58e8-4499-bb19-2c58aea4567b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:08:41.729837Z",
-     "start_time": "2023-12-11T07:08:41.727775Z"
+     "end_time": "2023-12-11T07:55:03.918220Z",
+     "start_time": "2023-12-11T07:55:03.907520Z"
     }
    },
    "outputs": [],
@@ -640,7 +652,7 @@
     "            self.model = nn_model.to(device)\n",
     "        if optimizer is None:\n",
     "            if self.model is not None:\n",
-    "                self.optimizer = torch.optim.SGD(model.parameters(), lr=lr)\n",
+    "                self.optimizer = torch.optim.SGD(self.model.parameters(), lr=lr)\n",
     "        else:\n",
     "            self.optimizer = optimizer\n",
     "        \n",
@@ -700,20 +712,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "fa7645f5-2c62-467a-b51c-5af1a0a48fb3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:09:44.498590Z",
-     "start_time": "2023-12-11T07:08:41.730531Z"
+     "end_time": "2023-12-11T07:55:44.291257Z",
+     "start_time": "2023-12-11T07:55:03.920370Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "40.24982344632768"
+      "text/plain": "71.99417372881356"
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,20 +767,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "ece5b5ff-be24-439c-bf53-7bf5d4fbf858",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:10:58.660421Z",
-     "start_time": "2023-12-11T07:09:44.501536Z"
+     "end_time": "2023-12-11T07:56:27.716837Z",
+     "start_time": "2023-12-11T07:55:44.287770Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "42.45453742937853"
+      "text/plain": "71.98313912429379"
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,12 +835,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "6d2d7214-84a6-410e-977c-3b16a198347b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:10:58.675711Z",
-     "start_time": "2023-12-11T07:10:58.662002Z"
+     "end_time": "2023-12-11T07:56:27.869323Z",
+     "start_time": "2023-12-11T07:56:27.717106Z"
     }
    },
    "outputs": [],
@@ -849,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "from evaluation import ClassificationEvaluator\n",
@@ -884,8 +896,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:11:56.836105Z",
-     "start_time": "2023-12-11T07:10:58.671679Z"
+     "end_time": "2023-12-11T07:57:07.388352Z",
+     "start_time": "2023-12-11T07:56:27.871621Z"
     }
    },
    "id": "b7f048d71276da1f"
@@ -902,12 +914,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "929d7e1a-5b7c-400e-a647-c565cb357d78",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:11:56.840404Z",
-     "start_time": "2023-12-11T07:11:56.838159Z"
+     "end_time": "2023-12-11T07:57:07.435082Z",
+     "start_time": "2023-12-11T07:57:07.388802Z"
     }
    },
    "outputs": [],
@@ -963,12 +975,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "14681f54-23a1-4f93-9145-abf484c91c54",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:11:59.375391Z",
-     "start_time": "2023-12-11T07:11:56.840630Z"
+     "end_time": "2023-12-11T07:57:09.985228Z",
+     "start_time": "2023-12-11T07:57:07.392989Z"
     }
    },
    "outputs": [
@@ -976,7 +988,7 @@
      "data": {
       "text/plain": "79.05190677966102"
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,12 +1028,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "id": "f6fb628f-aefc-4bf1-8322-a175a16170e4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:11:59.386374Z",
-     "start_time": "2023-12-11T07:11:59.377248Z"
+     "end_time": "2023-12-11T07:57:09.990651Z",
+     "start_time": "2023-12-11T07:57:09.985411Z"
     }
    },
    "outputs": [
@@ -1029,7 +1041,7 @@
      "data": {
       "text/plain": "'RandomTreeGenerator '"
      },
-     "execution_count": 36,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,12 +1053,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "5cdc2a2f-3259-4431-943f-7392fe520e44",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:11:59.387284Z",
-     "start_time": "2023-12-11T07:11:59.381993Z"
+     "end_time": "2023-12-11T07:57:10.037729Z",
+     "start_time": "2023-12-11T07:57:09.991929Z"
     }
    },
    "outputs": [
@@ -1054,7 +1066,7 @@
      "data": {
       "text/plain": "7"
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,12 +1078,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "ae9bb646-e0d1-4de6-b5a1-cff0f0a1b172",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T07:12:01.180618Z",
-     "start_time": "2023-12-11T07:11:59.396197Z"
+     "end_time": "2023-12-11T07:57:11.782832Z",
+     "start_time": "2023-12-11T07:57:10.031608Z"
     }
    },
    "outputs": [
@@ -1079,7 +1091,7 @@
      "data": {
       "text/plain": "79.69412076271186"
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
