Example Creating_new_classifier notebook, removed ensembles.py, added classifiers.py and updated notebooks

--- a/Basic_Classification_Examples.ipynb
+++ b/Basic_Classification_Examples.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "* Using the ```test_then_train_evaluation``` and ```test_then_train_RIVER``` helper functions.\n",
     "* These are just examples on how to run several algorithms, it is kind of repetitive, but might be useful to have an example.\n",
-    "* We show how to use AdaptiveRandomForest using its wrapper (```from ensembles import AdaptiveRandomForest```) and how to create MOA learners and wrap them using a MOALearner (```from learners import MOAClassifier```).\n",
+    "* We show how to use AdaptiveRandomForest using its wrapper (```from classifiers import AdaptiveRandomForest```) and how to create MOA learners and wrap them using a MOALearner (```from learners import MOAClassifier```).\n",
     "* Examples from MOA and River use the same CSV file.\n",
     "\n",
     "**Notebook last update: 08/12/2023**"
@@ -17,10 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "be91302b-3d48-449a-9eeb-4444d86d8e7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MOA jar path location (config.ini): ./jar/moa.jar\n",
+      "JVM Location (system): \n",
+      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
+      "Sucessfully started the JVM and added MOA jar to the class path\n"
+     ]
+    }
+   ],
    "source": [
     "from prepare_jpype import start_jpype\n",
     "start_jpype()\n",
@@ -31,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "60bb1d0d-66e3-45f1-b7cc-15ae08cbe81a",
    "metadata": {},
    "outputs": [],
@@ -52,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "3d366b78-feeb-497a-8a05-578437600343",
    "metadata": {},
    "outputs": [],
@@ -64,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "d56e186b-a288-4953-9d95-74f25cfeff5e",
    "metadata": {},
    "outputs": [
@@ -72,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARFClassifier, 0.8760, 0.2750, 0.2707\n"
+      "ARFClassifier, 0.8630, 0.2438, 0.2520\n"
      ]
     }
    ],
@@ -90,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "0d9c9d33-52b2-4442-a577-396de0bf31e7",
    "metadata": {},
    "outputs": [
@@ -98,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HoeffdingTreeClassifier, 0.8230, 0.0280, 0.0288\n"
+      "HoeffdingTreeClassifier, 0.8230, 0.0285, 0.0293\n"
      ]
     }
    ],
@@ -113,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "84f29ddd-2e97-4c31-945a-1129e8ca1833",
    "metadata": {},
    "outputs": [
@@ -121,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNNClassifier, 0.7550, 1.6912, 1.6247\n"
+      "KNNClassifier, 0.7560, 1.6352, 1.6364\n"
      ]
     }
    ],
@@ -136,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "47e22fbe-c42a-4cf0-9f40-0c408fc8185b",
    "metadata": {},
    "outputs": [
@@ -144,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GaussianNB, 0.8490, 0.0258, 0.0298\n"
+      "GaussianNB, 0.8490, 0.0245, 0.0277\n"
      ]
     }
    ],
@@ -159,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "7f59847d-b33b-431e-8ddb-ee0a3a5375b7",
    "metadata": {},
    "outputs": [
@@ -167,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SRPClassifier(HoeffdingTreeClassifier), 0.8870, 0.6245, 0.6069\n"
+      "SRPClassifier(HoeffdingTreeClassifier), 0.8910, 0.5973, 0.5978\n"
      ]
     }
    ],
@@ -185,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "e25a96f4-7612-445b-b210-838d474fba2d",
    "metadata": {},
    "outputs": [
@@ -193,7 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ExtremelyFastDecisionTreeClassifier, 0.8230, 0.1920, 0.1809\n"
+      "ExtremelyFastDecisionTreeClassifier, 0.8230, 0.1673, 0.1681\n"
      ]
     }
    ],
@@ -216,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "af49a45b-767d-4532-bf39-f408d2ab515a",
    "metadata": {},
    "outputs": [],
@@ -230,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "8b4a0ea7-8707-4bf3-8ce6-1f3a965497c0",
    "metadata": {},
    "outputs": [
@@ -240,7 +252,7 @@
        "['0', '1']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "9cf0778d-942f-44e2-bd79-e754e6c7735e",
    "metadata": {},
    "outputs": [
@@ -259,12 +271,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AdaptiveRandomForest wallclock: 0.20018792152404785 cpu_time: 0.4992449999999984 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 89.45, 'Kappa Statistic (percent)': 78.10294728102947, 'Kappa Temporal Statistic (percent)': 24.9110320284697, 'Kappa M Statistic (percent)': 73.2233502538071}\n"
+      "AdaptiveRandomForest wallclock: 0.43860316276550293 cpu_time: 1.4520670000000013 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 89.45, 'Kappa Statistic (percent)': 78.10294728102947, 'Kappa Temporal Statistic (percent)': 24.9110320284697, 'Kappa M Statistic (percent)': 73.2233502538071}\n"
      ]
     }
    ],
    "source": [
-    "from ensembles import AdaptiveRandomForest\n",
+    "from classifiers import AdaptiveRandomForest\n",
     "\n",
     "arf10 = AdaptiveRandomForest(schema=elec_stream.get_schema(), ensemble_size=5)\n",
     "results = test_then_train_evaluation(stream=elec_stream, learner=arf10)\n",
@@ -274,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "1270cf7b-3bf1-4092-9498-f5e6f91aea64",
    "metadata": {},
    "outputs": [
@@ -282,7 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HoeffdingTree wallclock: 0.038034915924072266 cpu_time: 0.05328499999999892 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.65, 'Kappa Statistic (percent)': 64.11315010011087, 'Kappa Temporal Statistic (percent)': -23.487544483985793, 'Kappa M Statistic (percent)': 55.964467005076145}\n"
+      "HoeffdingTree wallclock: 0.04164600372314453 cpu_time: 0.16458300000000037 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.65, 'Kappa Statistic (percent)': 64.11315010011087, 'Kappa Temporal Statistic (percent)': -23.487544483985793, 'Kappa M Statistic (percent)': 55.964467005076145}\n"
      ]
     }
    ],
@@ -298,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "c8ac0b21-a3bf-488b-b5cb-ce6289298ee1",
    "metadata": {},
    "outputs": [
@@ -306,7 +318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN wallclock: 0.1179201602935791 cpu_time: 0.19824599999999926 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 80.55, 'Kappa Statistic (percent)': 59.525712097754244, 'Kappa Temporal Statistic (percent)': -38.43416370106766, 'Kappa M Statistic (percent)': 50.63451776649747}\n"
+      "kNN wallclock: 0.13543391227722168 cpu_time: 0.3617920000000012 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 80.55, 'Kappa Statistic (percent)': 59.525712097754244, 'Kappa Temporal Statistic (percent)': -38.43416370106766, 'Kappa M Statistic (percent)': 50.63451776649747}\n"
      ]
     }
    ],
@@ -321,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "15ccd3c4-f0d6-479d-b773-df230cfdf2aa",
    "metadata": {},
    "outputs": [
@@ -329,7 +341,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EFDT wallclock: 0.03838682174682617 cpu_time: 0.04312900000000042 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.69999999999999, 'Kappa Statistic (percent)': 64.22426628726465, 'Kappa Temporal Statistic (percent)': -23.131672597864835, 'Kappa M Statistic (percent)': 56.09137055837563}\n"
+      "EFDT wallclock: 0.041168212890625 cpu_time: 0.09535999999999945 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.69999999999999, 'Kappa Statistic (percent)': 64.22426628726465, 'Kappa Temporal Statistic (percent)': -23.131672597864835, 'Kappa M Statistic (percent)': 56.09137055837563}\n"
      ]
     }
    ],
@@ -344,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "e264098a-588a-456b-ae11-dced5b5ceb7f",
    "metadata": {},
    "outputs": [
@@ -352,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NaiveBayes wallclock: 0.034284114837646484 cpu_time: 0.04129999999999967 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 84.0, 'Kappa Statistic (percent)': 66.56748353448563, 'Kappa Temporal Statistic (percent)': -13.879003558718917, 'Kappa M Statistic (percent)': 59.39086294416243}\n"
+      "NaiveBayes wallclock: 0.03550219535827637 cpu_time: 0.07216899999999882 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 84.0, 'Kappa Statistic (percent)': 66.56748353448563, 'Kappa Temporal Statistic (percent)': -13.879003558718917, 'Kappa M Statistic (percent)': 59.39086294416243}\n"
      ]
     }
    ],
@@ -367,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "6fa952e8-08e3-4e6f-88ad-dac1aaea94ef",
    "metadata": {},
    "outputs": [
@@ -375,7 +387,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "StreamingRandomPatches wallclock: 0.22035813331604004 cpu_time: 0.43422499999999786 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 88.75, 'Kappa Statistic (percent)': 76.35402128768642, 'Kappa Temporal Statistic (percent)': 19.928825622775744, 'Kappa M Statistic (percent)': 71.4467005076142}\n"
+      "StreamingRandomPatches wallclock: 0.26701807975769043 cpu_time: 0.7757100000000001 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 88.75, 'Kappa Statistic (percent)': 76.35402128768642, 'Kappa Temporal Statistic (percent)': 19.928825622775744, 'Kappa M Statistic (percent)': 71.4467005076142}\n"
      ]
     }
    ],
