--- a/DEMO.ipynb
+++ b/DEMO.ipynb
@@ -63,8 +63,8 @@
    ],
    "source": [
     "## Test-then-train loop\n",
-    "from ensembles import OnlineBagging\n",
     "from evaluation import ClassificationEvaluator\n",
+    "from classifiers import OnlineBagging\n",
     "\n",
     "## Opening a file as a stream\n",
     "elec_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"electricity.csv\")\n",
@@ -81,7 +81,6 @@
     "    prediction = ob_learner.predict(instance)\n",
     "    ob_evaluator.update(instance.y(), prediction)\n",
     "    ob_learner.train(instance)\n",
-    "\n",
     "\n",
     "ob_evaluator.accuracy()"
    ]
@@ -287,10 +286,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'OnlineBagging',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x116b8f3d0>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x1332ed810>,\n",
-       " 'wallclock': 1.6961867809295654,\n",
-       " 'cpu_time': 1.8730550000000008}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x104f95090>,\n",
+       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x1060e5590>,\n",
+       " 'wallclock': 1.5961339473724365,\n",
+       " 'cpu_time': 1.801927000000001}"
       ]
      },
      "execution_count": 4,
@@ -491,7 +490,7 @@
     "elec_stream.restart()\n",
     "\n",
     "# Create the wrapper\n",
-    "moa_HAT = MOAClassifier(moa_learner=HoeffdingAdaptiveTree(), CLI=\"-g 50\")\n",
+    "moa_HAT = MOAClassifier(moa_learner=HoeffdingAdaptiveTree, CLI=\"-g 50\")\n",
     "\n",
     "results_HAT = prequential_evaluation(stream=elec_stream, learner=moa_HAT, window_size=4500)\n",
     "\n",
@@ -544,6 +543,7 @@
     }
    ],
    "source": [
+    "# Shows the command line (CLI) parameters available for the MOA learner\n",
     "print(moa_HAT.CLI_help())"
    ]
   },
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "56ed36b6-fd9a-49b6-965e-2ff964423948",
    "metadata": {},
    "outputs": [
@@ -1238,7 +1238,7 @@
        "40                      0.841128                               0.839360  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,8 +1267,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f41e74a0-715e-47ea-8ff6-f45beb8a1ce6",
+   "metadata": {},
+   "source": [
+    "## Plotting Regression results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "700d864e-f2d4-4e56-9e0d-d39c5f05e936",
    "metadata": {},
    "outputs": [
@@ -1288,8 +1296,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "071f25af-0673-4377-8912-0f0f5f43380c",
+   "metadata": {},
+   "source": [
+    "## Plotting Drift Detection results (Classification)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "f7b59e4a-7651-4cff-82c0-bb587917e234",
    "metadata": {},
    "outputs": [
@@ -1325,12 +1341,14 @@
    "source": [
     "# Creating a synthetic stream with concept drifts from MOA\n",
     "\n",
+    "* Demonstrates the flexibility of the API, these level of manipulation of the API is expected from experienced MOA users. \n",
+    "\n",
     "EvaluatePrequential -l trees.HoeffdingAdaptiveTree **-s (ConceptDriftStream -s generators.AgrawalGenerator -d (generators.AgrawalGenerator -f 2) -p 5000)** -e (WindowClassificationPerformanceEvaluator **-w 100**) **-i 10000 -f 100**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "5f3964f3-74bd-499b-b470-732b7d29c05c",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "b66d1529-6a11-4e6a-9da2-85833eccac4b",
    "metadata": {},
    "outputs": [
@@ -1541,7 +1559,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
