--- a/Efficient_Evaluation.ipynb
+++ b/Efficient_Evaluation.ipynb
@@ -83,9 +83,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'AdaptiveRandomForest',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x12811f550>,\n",
-       " 'wallclock': 57.29525828361511,\n",
-       " 'cpu_time': 69.27170899999999}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x127753450>,\n",
+       " 'wallclock': 53.602826833724976,\n",
+       " 'cpu_time': 65.62510999999999}"
       ]
      },
      "metadata": {},
@@ -145,7 +145,7 @@
     "from stream import stream_from_file\n",
     "from learners import MOAClassifier\n",
     "from evaluation import test_then_train_evaluation_fast\n",
-    "from ensembles import AdaptiveRandomForest\n",
+    "from classifiers import AdaptiveRandomForest\n",
     "\n",
     "learner = AdaptiveRandomForest(ensemble_size=30)\n",
     "\n",
@@ -168,9 +168,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'AdaptiveRandomForest',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x11fc76b10>,\n",
-       " 'wallclock': 61.14156198501587,\n",
-       " 'cpu_time': 65.82365700000001}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x11736aa50>,\n",
+       " 'wallclock': 60.4214301109314,\n",
+       " 'cpu_time': 65.947423}"
       ]
      },
      "metadata": {},
@@ -230,7 +230,7 @@
     "from stream import stream_from_file\n",
     "from learners import MOAClassifier\n",
     "from evaluation import test_then_train_evaluation\n",
-    "from ensembles import AdaptiveRandomForest\n",
+    "from classifiers import AdaptiveRandomForest\n",
     "\n",
     "learner = AdaptiveRandomForest(ensemble_size=30)\n",
     "\n",
