--- a/Evaluation_and_Data_Reading.ipynb
+++ b/Evaluation_and_Data_Reading.ipynb
@@ -244,7 +244,7 @@
     "from evaluation import ClassificationWindowedEvaluator\n",
     "from stream import stream_from_file\n",
     "\n",
-    "from ensembles import AdaptiveRandomForest\n",
+    "from classifiers import AdaptiveRandomForest\n",
     "\n",
     "stream = stream_from_file(path_to_csv_or_arff=csv_elec_path)\n",
     "ARF = AdaptiveRandomForest(schema=stream.get_schema(), CLI=\"-s 5 -x (ADWINChangeDetector -a 0.001) -p (ADWINChangeDetector -a 0.01)\")\n",
@@ -286,7 +286,7 @@
     "from evaluation import ClassificationEvaluator\n",
     "from stream import stream_from_file\n",
     "\n",
-    "from ensembles import OnlineBagging, AdaptiveRandomForest\n",
+    "from classifiers import OnlineBagging, AdaptiveRandomForest\n",
     "\n",
     "stream = stream_from_file(path_to_csv_or_arff=arff_elec_path)\n",
     "OB_learner = OnlineBagging(schema=stream.get_schema(), ensemble_size=5)\n",
@@ -352,7 +352,7 @@
     "from evaluation import ClassificationWindowedEvaluator\n",
     "from stream import stream_from_file\n",
     "\n",
-    "from ensembles import OnlineBagging, AdaptiveRandomForest\n",
+    "from classifiers import OnlineBagging, AdaptiveRandomForest\n",
     "\n",
     "stream = stream_from_file(path_to_csv_or_arff=csv_elec_path)\n",
     "OB_learner = OnlineBagging(schema=stream.get_schema(), ensemble_size=2)\n",
@@ -387,7 +387,7 @@
      "output_type": "stream",
      "text": [
       "78.65686793785311\n",
-      "{'learner': 'OnlineBagging', 'cumulative': <evaluation.ClassificationEvaluator object at 0x132b8f490>, 'wallclock': 0.22589516639709473, 'cpu_time': 0.5178350000000016}\n"
+      "{'learner': 'OnlineBagging', 'cumulative': <evaluation.ClassificationEvaluator object at 0x2b36de650>, 'wallclock': 0.22093510627746582, 'cpu_time': 0.5977919999999983}\n"
      ]
     }
    ],
@@ -502,10 +502,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'OnlineBagging',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x1331819d0>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x1331b9110>,\n",
-       " 'wallclock': 9.228378057479858,\n",
-       " 'cpu_time': 9.979717000000008}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x1276d6150>,\n",
+       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x2b36ad350>,\n",
+       " 'wallclock': 8.934425830841064,\n",
+       " 'cpu_time': 10.084489000000005}"
       ]
      },
      "metadata": {},
@@ -551,8 +551,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 43s, sys: 4.26 s, total: 1min 47s\n",
-      "Wall time: 1min 45s\n"
+      "CPU times: user 1min 36s, sys: 4.11 s, total: 1min 40s\n",
+      "Wall time: 1min 37s\n"
      ]
     }
    ],
@@ -574,9 +574,9 @@
      "data": {
       "text/plain": [
        "{'learner': 'NaiveBayes',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x143251650>,\n",
-       " 'wallclock': 40.533841133117676,\n",
-       " 'cpu_time': 40.338476000000014}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x2b301d8d0>,\n",
+       " 'wallclock': 39.64521789550781,\n",
+       " 'cpu_time': 39.567037}"
       ]
      },
      "metadata": {},
@@ -826,7 +826,7 @@
     "from evaluation import RegressionWindowedEvaluator\n",
     "from stream import stream_from_file\n",
     "\n",
-    "from ensembles import AdaptiveRandomForestRegressor\n",
+    "from regressors import AdaptiveRandomForestRegressor\n",
     "\n",
     "stream = stream_from_file(path_to_csv_or_arff=csv_fried_path, enforce_regression=True)\n",
     "ARF = AdaptiveRandomForestRegressor(schema=stream.get_schema(), ensemble_size=5)\n",
@@ -870,8 +870,7 @@
     "from evaluation import RegressionEvaluator\n",
     "from stream import stream_from_file\n",
     "\n",
-    "from ensembles import AdaptiveRandomForestRegressor\n",
-    "from regressors import KNNRegressor\n",
+    "from regressors import KNNRegressor, AdaptiveRandomForestRegressor\n",
     "\n",
     "stream = stream_from_file(path_to_csv_or_arff=csv_fried_path, enforce_regression=True)\n",
     "kNN_learner = KNNRegressor(schema=stream.get_schema(), k=5)\n",
@@ -937,8 +936,7 @@
     "from evaluation import prequential_evaluation\n",
     "from stream import stream_from_file\n",
     "\n",
-    "from ensembles import AdaptiveRandomForestRegressor\n",
-    "from regressors import KNNRegressor\n",
+    "from regressors import KNNRegressor, AdaptiveRandomForestRegressor\n",
     "\n",
     "stream = stream_from_file(path_to_csv_or_arff=csv_fried_path, enforce_regression=True)\n",
     "kNN_learner = KNNRegressor(schema=stream.get_schema(), k=5)\n",
@@ -973,7 +971,7 @@
      "output_type": "stream",
      "text": [
       "2.171382783882719\n",
-      "{'learner': 'kNNRegressor', 'cumulative': <evaluation.RegressionEvaluator object at 0x132d1f790>, 'wallclock': 4.337644577026367, 'cpu_time': 4.408961999999974}\n"
+      "{'learner': 'kNNRegressor', 'cumulative': <evaluation.RegressionEvaluator object at 0x2b642bcd0>, 'wallclock': 4.155563116073608, 'cpu_time': 4.15540900000002}\n"
      ]
     }
    ],
@@ -999,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "121e54e2-4ba2-41be-8397-408ad40db23d",
    "metadata": {},
    "outputs": [
