--- a/Data_Reading.ipynb
+++ b/Data_Reading.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "# local code imports\n",
     "from evaluation import *\n",
-    "from ensembles import OnlineBagging\n",
+    "from classifiers import OnlineBagging\n",
     "from stream import *\n",
     "\n",
     "arff_elec_path = './data/electricity.arff'\n",
@@ -244,8 +244,8 @@
      "output_type": "stream",
      "text": [
       "[45312.0, 81.97777777777779, 63.596765274097066, -17.706821480406372, 63.203266787658805]\n",
-      "CPU times: user 3.21 s, sys: 71 ms, total: 3.28 s\n",
-      "Wall time: 2.15 s\n"
+      "CPU times: user 3.1 s, sys: 73.5 ms, total: 3.17 s\n",
+      "Wall time: 1.96 s\n"
      ]
     }
    ],
@@ -444,8 +444,8 @@
      "output_type": "stream",
      "text": [
       "[45312.0, 81.97777777777779, 63.596765274097066, -17.706821480406372, 63.203266787658805]\n",
-      "CPU times: user 788 ms, sys: 24.8 ms, total: 813 ms\n",
-      "Wall time: 518 ms\n"
+      "CPU times: user 836 ms, sys: 28.7 ms, total: 864 ms\n",
+      "Wall time: 485 ms\n"
      ]
     }
    ],
@@ -1218,13 +1218,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<stream.Instance object at 0x2b094f310>\n",
-      "<stream.Instance object at 0x2afa8b990>\n",
-      "<stream.Instance object at 0x2c53fadd0>\n",
+      "<stream.Instance object at 0x2aeeb0e90>\n",
+      "<stream.Instance object at 0x2aeeb1090>\n",
+      "<stream.Instance object at 0x2aeeb0dd0>\n",
       "restarting stream...\n",
-      "<stream.Instance object at 0x2c53fadd0>\n",
-      "<stream.Instance object at 0x2afa73bd0>\n",
-      "<stream.Instance object at 0x2b094f310>\n",
+      "<stream.Instance object at 0x10ff492d0>\n",
+      "<stream.Instance object at 0x10ff492d0>\n",
+      "<stream.Instance object at 0x10ff492d0>\n",
       "Not a moa_stream, a numpy read file\n",
       "Read 45312 instances, total = 45312\n"
      ]
@@ -1479,7 +1479,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<stream.Instance object at 0x2c8adb690>\n"
+      "<stream.Instance object at 0x13fbf12d0>\n"
      ]
     },
     {
@@ -1511,7 +1511,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<stream.Instance object at 0x2c640fd50>\n",
+      "<stream.Instance object at 0x107aad590>\n",
       "Not a moa_stream, a numpy read file\n"
      ]
     }
@@ -1549,8 +1549,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 22 s, sys: 103 ms, total: 22.1 s\n",
-      "Wall time: 22 s\n"
+      "CPU times: user 21.4 s, sys: 99.6 ms, total: 21.5 s\n",
+      "Wall time: 20.9 s\n"
      ]
     }
    ],
@@ -1580,8 +1580,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 22.2 s, sys: 91.3 ms, total: 22.3 s\n",
-      "Wall time: 22.4 s\n"
+      "CPU times: user 21.8 s, sys: 76.5 ms, total: 21.8 s\n",
+      "Wall time: 21.4 s\n"
      ]
     }
    ],
